fsv5d/src/pp2/y.output
State 69 conflicts: 1 reduce/reduce
State 210 conflicts: 1 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: VarDecl
    5     | FnDecl
    6     | ClassDecl
    7     | InterfaceDecl

    8 InterfaceDecl: T_Interface T_Identifier '{' ProtoList '}'

    9 ProtoList: /* empty */
   10          | ProtoList Prototype

   11 Prototype: Type T_Identifier '(' Formals ')' ';'
   12          | T_Void T_Identifier '(' Formals ')' ';'

   13 ClassDecl: T_Class T_Identifier PeExtend ImplList '{' Fields '}'

   14 PeExtend: T_Extends T_Identifier
   15         | /* empty */

   16 Fields: /* empty */
   17       | Fields Field

   18 Field: VarDecl
   19      | FnDecl

   20 ImplList: /* empty */
   21         | T_Implements T_Identifier ImplList
   22         | ',' T_Implements T_Identifier ImplList

   23 VarDecl: Variable ';'

   24 Variable: Type T_Identifier

   25 Type: T_Int
   26     | T_Bool
   27     | T_String
   28     | T_Double
   29     | T_Identifier
   30     | Type T_Dims

   31 FnDecl: FnHeader StmtBlock

   32 FnHeader: Type T_Identifier '(' Formals ')'
   33         | T_Void T_Identifier '(' Formals ')'

   34 Formals: FormalList
   35        | /* empty */

   36 FormalList: FormalList ',' Variable
   37           | Variable

   38 StmtBlock: '{' VarDecls StmtList '}'

   39 VarDecls: VarDecls VarDecl
   40         | /* empty */

   41 StmtList: /* empty */
   42         | Stmt StmtList

   43 Stmt: PeExpr ';'
   44     | IfStmt
   45     | WhileStmt
   46     | ForStmt
   47     | BreakStmt
   48     | ReturnStmt
   49     | PrintStmt
   50     | SwitchStmt
   51     | StmtBlock

   52 PeExpr: /* empty */
   53       | Expr

   54 IfStmt: T_If '(' Expr ')' Stmt
   55       | T_If '(' Expr ')' Stmt T_Else Stmt

   56 WhileStmt: T_While '(' Expr ')' Stmt

   57 ForStmt: T_For '(' PeExpr ';' Expr ';' PeExpr ')' Stmt

   58 ReturnStmt: T_Return PeExpr ';'

   59 BreakStmt: T_Break ';'

   60 PrintStmt: T_Print '(' NeExprList ')' ';'

   61 SwitchStmt: T_Switch '(' Expr ')' '{' Cases '}'

   62 Cases: T_Case T_IntConstant ':' StmtList Cases
   63      | T_Case T_IntConstant ':' StmtList Default ';'
   64      | T_Case T_IntConstant ':' StmtList

   65 Default: T_Default StmtList

   66 NeExprList: NeExprList ',' Expr
   67           | Expr

   68 ExprList: NeExprList
   69         | /* empty */

   70 Expr: LValue '=' Expr
   71     | Constant
   72     | LValue
   73     | T_This
   74     | Call
   75     | '(' Expr ')'
   76     | Expr '+' Expr
   77     | Expr '-' Expr
   78     | Expr '*' Expr
   79     | Expr '/' Expr
   80     | Expr '%' Expr
   81     | '-' Expr
   82     | Expr '<' Expr
   83     | Expr T_LessEqual Expr
   84     | Expr '>' Expr
   85     | Expr T_GreaterEqual Expr
   86     | Expr T_Equal Expr
   87     | Expr T_NotEqual Expr
   88     | Expr T_And Expr
   89     | Expr T_Or Expr
   90     | '!' Expr
   91     | T_ReadInteger '(' ')'
   92     | T_ReadLine '(' ')'
   93     | T_New '(' T_Identifier ')'
   94     | T_NewArray '(' Expr ',' Type ')'

   95 LValue: T_Identifier
   96       | Expr '.' T_Identifier
   97       | Expr '[' Expr ']'

   98 Call: T_Identifier '(' ExprList ')'
   99     | Expr '.' T_Identifier '(' ExprList ')'

  100 Constant: T_IntConstant
  101         | T_DoubleConstant
  102         | T_BoolConstant
  103         | T_StringConstant
  104         | T_Null


Terminals, with rules where they appear

$end (0) 0
'!' (33) 90
'%' (37) 80
'(' (40) 11 12 32 33 54 55 56 57 60 61 75 91 92 93 94 98 99
')' (41) 11 12 32 33 54 55 56 57 60 61 75 91 92 93 94 98 99
'*' (42) 78
'+' (43) 76
',' (44) 22 36 66 94
'-' (45) 77 81
'.' (46) 96 99
'/' (47) 79
':' (58) 62 63 64
';' (59) 11 12 23 43 57 58 59 60 63
'<' (60) 82
'=' (61) 70
'>' (62) 84
'[' (91) 97
']' (93) 97
'{' (123) 8 13 38 61
'}' (125) 8 13 38 61
error (256)
T_Void (258) 12 33
T_Bool (259) 26
T_Int (260) 25
T_Double (261) 28
T_String (262) 27
T_Class (263) 13
T_LessEqual (264) 83
T_GreaterEqual (265) 85
T_Equal (266) 86
T_NotEqual (267) 87
T_Dims (268) 30
T_And (269) 88
T_Or (270) 89
T_Null (271) 104
T_Extends (272) 14
T_This (273) 73
T_Interface (274) 8
T_Implements (275) 21 22
T_While (276) 56
T_For (277) 57
T_If (278) 54 55
T_Else (279) 55
T_Return (280) 58
T_Break (281) 59
T_New (282) 93
T_NewArray (283) 94
T_Print (284) 60
T_ReadInteger (285) 91
T_ReadLine (286) 92
T_Switch (287) 61
T_Case (288) 62 63 64
T_Default (289) 65
T_Identifier (290) 8 11 12 13 14 21 22 24 29 32 33 93 95 96 98 99
T_StringConstant (291) 103
T_IntConstant (292) 62 63 64 100
T_DoubleConstant (293) 101
T_BoolConstant (294) 102
LTELSE (295)
UNARY (296)


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
Program (62)
    on left: 1, on right: 0
DeclList (63)
    on left: 2 3, on right: 1 2
Decl (64)
    on left: 4 5 6 7, on right: 2 3
InterfaceDecl (65)
    on left: 8, on right: 7
ProtoList (66)
    on left: 9 10, on right: 8 10
Prototype (67)
    on left: 11 12, on right: 10
ClassDecl (68)
    on left: 13, on right: 6
PeExtend (69)
    on left: 14 15, on right: 13
Fields (70)
    on left: 16 17, on right: 13 17
Field (71)
    on left: 18 19, on right: 17
ImplList (72)
    on left: 20 21 22, on right: 13 21 22
VarDecl (73)
    on left: 23, on right: 4 18 39
Variable (74)
    on left: 24, on right: 23 36 37
Type (75)
    on left: 25 26 27 28 29 30, on right: 11 24 30 32 94
FnDecl (76)
    on left: 31, on right: 5 19
FnHeader (77)
    on left: 32 33, on right: 31
Formals (78)
    on left: 34 35, on right: 11 12 32 33
FormalList (79)
    on left: 36 37, on right: 34 36
StmtBlock (80)
    on left: 38, on right: 31 51
VarDecls (81)
    on left: 39 40, on right: 38 39
StmtList (82)
    on left: 41 42, on right: 38 42 62 63 64 65
Stmt (83)
    on left: 43 44 45 46 47 48 49 50 51, on right: 42 54 55 56 57
PeExpr (84)
    on left: 52 53, on right: 43 57 58
IfStmt (85)
    on left: 54 55, on right: 44
WhileStmt (86)
    on left: 56, on right: 45
ForStmt (87)
    on left: 57, on right: 46
ReturnStmt (88)
    on left: 58, on right: 48
BreakStmt (89)
    on left: 59, on right: 47
PrintStmt (90)
    on left: 60, on right: 49
SwitchStmt (91)
    on left: 61, on right: 50
Cases (92)
    on left: 62 63 64, on right: 61 62
Default (93)
    on left: 65, on right: 63
NeExprList (94)
    on left: 66 67, on right: 60 66 68
ExprList (95)
    on left: 68 69, on right: 98 99
Expr (96)
    on left: 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87
    88 89 90 91 92 93 94, on right: 53 54 55 56 57 61 66 67 70 75 76
    77 78 79 80 81 82 83 84 85 86 87 88 89 90 94 96 97 99
LValue (97)
    on left: 95 96 97, on right: 70 72
Call (98)
    on left: 98 99, on right: 74
Constant (99)
    on left: 100 101 102 103 104, on right: 71


state 0

    0 $accept: . Program $end

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    Program        go to state 9
    DeclList       go to state 10
    Decl           go to state 11
    InterfaceDecl  go to state 12
    ClassDecl      go to state 13
    VarDecl        go to state 14
    Variable       go to state 15
    Type           go to state 16
    FnDecl         go to state 17
    FnHeader       go to state 18


state 1

   33 FnHeader: T_Void . T_Identifier '(' Formals ')'

    T_Identifier  shift, and go to state 19


state 2

   26 Type: T_Bool .

    $default  reduce using rule 26 (Type)


state 3

   25 Type: T_Int .

    $default  reduce using rule 25 (Type)


state 4

   28 Type: T_Double .

    $default  reduce using rule 28 (Type)


state 5

   27 Type: T_String .

    $default  reduce using rule 27 (Type)


state 6

   13 ClassDecl: T_Class . T_Identifier PeExtend ImplList '{' Fields '}'

    T_Identifier  shift, and go to state 20


state 7

    8 InterfaceDecl: T_Interface . T_Identifier '{' ProtoList '}'

    T_Identifier  shift, and go to state 21


state 8

   29 Type: T_Identifier .

    $default  reduce using rule 29 (Type)


state 9

    0 $accept: Program . $end

    $end  shift, and go to state 22


state 10

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 1 (Program)

    Decl           go to state 23
    InterfaceDecl  go to state 12
    ClassDecl      go to state 13
    VarDecl        go to state 14
    Variable       go to state 15
    Type           go to state 16
    FnDecl         go to state 17
    FnHeader       go to state 18


state 11

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


state 12

    7 Decl: InterfaceDecl .

    $default  reduce using rule 7 (Decl)


state 13

    6 Decl: ClassDecl .

    $default  reduce using rule 6 (Decl)


state 14

    4 Decl: VarDecl .

    $default  reduce using rule 4 (Decl)


state 15

   23 VarDecl: Variable . ';'

    ';'  shift, and go to state 24


state 16

   24 Variable: Type . T_Identifier
   30 Type: Type . T_Dims
   32 FnHeader: Type . T_Identifier '(' Formals ')'

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 26


state 17

    5 Decl: FnDecl .

    $default  reduce using rule 5 (Decl)


state 18

   31 FnDecl: FnHeader . StmtBlock

    '{'  shift, and go to state 27

    StmtBlock  go to state 28


state 19

   33 FnHeader: T_Void T_Identifier . '(' Formals ')'

    '('  shift, and go to state 29


state 20

   13 ClassDecl: T_Class T_Identifier . PeExtend ImplList '{' Fields '}'

    T_Extends  shift, and go to state 30

    $default  reduce using rule 15 (PeExtend)

    PeExtend  go to state 31


state 21

    8 InterfaceDecl: T_Interface T_Identifier . '{' ProtoList '}'

    '{'  shift, and go to state 32


state 22

    0 $accept: Program $end .

    $default  accept


state 23

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


state 24

   23 VarDecl: Variable ';' .

    $default  reduce using rule 23 (VarDecl)


state 25

   30 Type: Type T_Dims .

    $default  reduce using rule 30 (Type)


state 26

   24 Variable: Type T_Identifier .
   32 FnHeader: Type T_Identifier . '(' Formals ')'

    '('  shift, and go to state 33

    $default  reduce using rule 24 (Variable)


state 27

   38 StmtBlock: '{' . VarDecls StmtList '}'

    $default  reduce using rule 40 (VarDecls)

    VarDecls  go to state 34


state 28

   31 FnDecl: FnHeader StmtBlock .

    $default  reduce using rule 31 (FnDecl)


state 29

   33 FnHeader: T_Void T_Identifier '(' . Formals ')'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 35 (Formals)

    Variable    go to state 35
    Type        go to state 36
    Formals     go to state 37
    FormalList  go to state 38


state 30

   14 PeExtend: T_Extends . T_Identifier

    T_Identifier  shift, and go to state 39


state 31

   13 ClassDecl: T_Class T_Identifier PeExtend . ImplList '{' Fields '}'

    T_Implements  shift, and go to state 40
    ','           shift, and go to state 41

    $default  reduce using rule 20 (ImplList)

    ImplList  go to state 42


state 32

    8 InterfaceDecl: T_Interface T_Identifier '{' . ProtoList '}'

    $default  reduce using rule 9 (ProtoList)

    ProtoList  go to state 43


state 33

   32 FnHeader: Type T_Identifier '(' . Formals ')'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 35 (Formals)

    Variable    go to state 35
    Type        go to state 36
    Formals     go to state 44
    FormalList  go to state 38


state 34

   38 StmtBlock: '{' VarDecls . StmtList '}'
   39 VarDecls: VarDecls . VarDecl

    T_Bool            shift, and go to state 2
    T_Int             shift, and go to state 3
    T_Double          shift, and go to state 4
    T_String          shift, and go to state 5
    T_Null            shift, and go to state 45
    T_This            shift, and go to state 46
    T_While           shift, and go to state 47
    T_For             shift, and go to state 48
    T_If              shift, and go to state 49
    T_Return          shift, and go to state 50
    T_Break           shift, and go to state 51
    T_New             shift, and go to state 52
    T_NewArray        shift, and go to state 53
    T_Print           shift, and go to state 54
    T_ReadInteger     shift, and go to state 55
    T_ReadLine        shift, and go to state 56
    T_Switch          shift, and go to state 57
    T_Identifier      shift, and go to state 58
    T_StringConstant  shift, and go to state 59
    T_IntConstant     shift, and go to state 60
    T_DoubleConstant  shift, and go to state 61
    T_BoolConstant    shift, and go to state 62
    '-'               shift, and go to state 63
    '!'               shift, and go to state 64
    '('               shift, and go to state 65
    '{'               shift, and go to state 27

    ';'       reduce using rule 52 (PeExpr)
    $default  reduce using rule 41 (StmtList)

    VarDecl     go to state 66
    Variable    go to state 15
    Type        go to state 36
    StmtBlock   go to state 67
    StmtList    go to state 68
    Stmt        go to state 69
    PeExpr      go to state 70
    IfStmt      go to state 71
    WhileStmt   go to state 72
    ForStmt     go to state 73
    ReturnStmt  go to state 74
    BreakStmt   go to state 75
    PrintStmt   go to state 76
    SwitchStmt  go to state 77
    Expr        go to state 78
    LValue      go to state 79
    Call        go to state 80
    Constant    go to state 81


state 35

   37 FormalList: Variable .

    $default  reduce using rule 37 (FormalList)


state 36

   24 Variable: Type . T_Identifier
   30 Type: Type . T_Dims

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 82


state 37

   33 FnHeader: T_Void T_Identifier '(' Formals . ')'

    ')'  shift, and go to state 83


state 38

   34 Formals: FormalList .
   36 FormalList: FormalList . ',' Variable

    ','  shift, and go to state 84

    $default  reduce using rule 34 (Formals)


state 39

   14 PeExtend: T_Extends T_Identifier .

    $default  reduce using rule 14 (PeExtend)


state 40

   21 ImplList: T_Implements . T_Identifier ImplList

    T_Identifier  shift, and go to state 85


state 41

   22 ImplList: ',' . T_Implements T_Identifier ImplList

    T_Implements  shift, and go to state 86


state 42

   13 ClassDecl: T_Class T_Identifier PeExtend ImplList . '{' Fields '}'

    '{'  shift, and go to state 87


state 43

    8 InterfaceDecl: T_Interface T_Identifier '{' ProtoList . '}'
   10 ProtoList: ProtoList . Prototype

    T_Void        shift, and go to state 88
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 89

    Prototype  go to state 90
    Type       go to state 91


state 44

   32 FnHeader: Type T_Identifier '(' Formals . ')'

    ')'  shift, and go to state 92


state 45

  104 Constant: T_Null .

    $default  reduce using rule 104 (Constant)


state 46

   73 Expr: T_This .

    $default  reduce using rule 73 (Expr)


state 47

   56 WhileStmt: T_While . '(' Expr ')' Stmt

    '('  shift, and go to state 93


state 48

   57 ForStmt: T_For . '(' PeExpr ';' Expr ';' PeExpr ')' Stmt

    '('  shift, and go to state 94


state 49

   54 IfStmt: T_If . '(' Expr ')' Stmt
   55       | T_If . '(' Expr ')' Stmt T_Else Stmt

    '('  shift, and go to state 95


state 50

   58 ReturnStmt: T_Return . PeExpr ';'

    T_Null            shift, and go to state 45
    T_This            shift, and go to state 46
    T_New             shift, and go to state 52
    T_NewArray        shift, and go to state 53
    T_ReadInteger     shift, and go to state 55
    T_ReadLine        shift, and go to state 56
    T_Identifier      shift, and go to state 96
    T_StringConstant  shift, and go to state 59
    T_IntConstant     shift, and go to state 60
    T_DoubleConstant  shift, and go to state 61
    T_BoolConstant    shift, and go to state 62
    '-'               shift, and go to state 63
    '!'               shift, and go to state 64
    '('               shift, and go to state 65

    $default  reduce using rule 52 (PeExpr)

    PeExpr    go to state 97
    Expr      go to state 78
    LValue    go to state 79
    Call      go to state 80
    Constant  go to state 81


state 51

   59 BreakStmt: T_Break . ';'

    ';'  shift, and go to state 98


state 52

   93 Expr: T_New . '(' T_Identifier ')'

    '('  shift, and go to state 99


state 53

   94 Expr: T_NewArray . '(' Expr ',' Type ')'

    '('  shift, and go to state 100


state 54

   60 PrintStmt: T_Print . '(' NeExprList ')' ';'

    '('  shift, and go to state 101


state 55

   91 Expr: T_ReadInteger . '(' ')'

    '('  shift, and go to state 102


state 56

   92 Expr: T_ReadLine . '(' ')'

    '('  shift, and go to state 103


state 57

   61 SwitchStmt: T_Switch . '(' Expr ')' '{' Cases '}'

    '('  shift, and go to state 104


state 58

   29 Type: T_Identifier .
   95 LValue: T_Identifier .
   98 Call: T_Identifier . '(' ExprList ')'

    '('  shift, and go to state 105

    T_Dims        reduce using rule 29 (Type)
    T_Identifier  reduce using rule 29 (Type)
    $default      reduce using rule 95 (LValue)


state 59

  103 Constant: T_StringConstant .

    $default  reduce using rule 103 (Constant)


state 60

  100 Constant: T_IntConstant .

    $default  reduce using rule 100 (Constant)


state 61

  101 Constant: T_DoubleConstant .

    $default  reduce using rule 101 (Constant)


state 62

  102 Constant: T_BoolConstant .

    $default  reduce using rule 102 (Constant)


state 63

   81 Expr: '-' . Expr

    T_Null            shift, and go to state 45
    T_This            shift, and go to state 46
    T_New             shift, and go to state 52
    T_NewArray        shift, and go to state 53
    T_ReadInteger     shift, and go to state 55
    T_ReadLine        shift, and go to state 56
    T_Identifier      shift, and go to state 96
    T_StringConstant  shift, and go to state 59
    T_IntConstant     shift, and go to state 60
    T_DoubleConstant  shift, and go to state 61
    T_BoolConstant    shift, and go to state 62
    '-'               shift, and go to state 63
    '!'               shift, and go to state 64
    '('               shift, and go to state 65

    Expr      go to state 106
    LValue    go to state 79
    Call      go to state 80
    Constant  go to state 81


state 64

   90 Expr: '!' . Expr

    T_Null            shift, and go to state 45
    T_This            shift, and go to state 46
    T_New             shift, and go to state 52
    T_NewArray        shift, and go to state 53
    T_ReadInteger     shift, and go to state 55
    T_ReadLine        shift, and go to state 56
    T_Identifier      shift, and go to state 96
    T_StringConstant  shift, and go to state 59
    T_IntConstant     shift, and go to state 60
    T_DoubleConstant  shift, and go to state 61
    T_BoolConstant    shift, and go to state 62
    '-'               shift, and go to state 63
    '!'               shift, and go to state 64
    '('               shift, and go to state 65

    Expr      go to state 107
    LValue    go to state 79
    Call      go to state 80
    Constant  go to state 81


state 65

   75 Expr: '(' . Expr ')'

    T_Null            shift, and go to state 45
    T_This            shift, and go to state 46
    T_New             shift, and go to state 52
    T_NewArray        shift, and go to state 53
    T_ReadInteger     shift, and go to state 55
    T_ReadLine        shift, and go to state 56
    T_Identifier      shift, and go to state 96
    T_StringConstant  shift, and go to state 59
    T_IntConstant     shift, and go to state 60
    T_DoubleConstant  shift, and go to state 61
    T_BoolConstant    shift, and go to state 62
    '-'               shift, and go to state 63
    '!'               shift, and go to state 64
    '('               shift, and go to state 65

    Expr      go to state 108
    LValue    go to state 79
    Call      go to state 80
    Constant  go to state 81


state 66

   39 VarDecls: VarDecls VarDecl .

    $default  reduce using rule 39 (VarDecls)


state 67

   51 Stmt: StmtBlock .

    $default  reduce using rule 51 (Stmt)


state 68

   38 StmtBlock: '{' VarDecls StmtList . '}'

    '}'  shift, and go to state 109


state 69

   42 StmtList: Stmt . StmtList

    T_Null            shift, and go to state 45
    T_This            shift, and go to state 46
    T_While           shift, and go to state 47
    T_For             shift, and go to state 48
    T_If              shift, and go to state 49
    T_Return          shift, and go to state 50
    T_Break           shift, and go to state 51
    T_New             shift, and go to state 52
    T_NewArray        shift, and go to state 53
    T_Print           shift, and go to state 54
    T_ReadInteger     shift, and go to state 55
    T_ReadLine        shift, and go to state 56
    T_Switch          shift, and go to state 57
    T_Identifier      shift, and go to state 96
    T_StringConstant  shift, and go to state 59
    T_IntConstant     shift, and go to state 60
    T_DoubleConstant  shift, and go to state 61
    T_BoolConstant    shift, and go to state 62
    '-'               shift, and go to state 63
    '!'               shift, and go to state 64
    '('               shift, and go to state 65
    '{'               shift, and go to state 27

    ';'       reduce using rule 41 (StmtList)
    ';'       [reduce using rule 52 (PeExpr)]
    $default  reduce using rule 41 (StmtList)

    StmtBlock   go to state 67
    StmtList    go to state 110
    Stmt        go to state 69
    PeExpr      go to state 70
    IfStmt      go to state 71
    WhileStmt   go to state 72
    ForStmt     go to state 73
    ReturnStmt  go to state 74
    BreakStmt   go to state 75
    PrintStmt   go to state 76
    SwitchStmt  go to state 77
    Expr        go to state 78
    LValue      go to state 79
    Call        go to state 80
    Constant    go to state 81


state 70

   43 Stmt: PeExpr . ';'

    ';'  shift, and go to state 111


state 71

   44 Stmt: IfStmt .

    $default  reduce using rule 44 (Stmt)


state 72

   45 Stmt: WhileStmt .

    $default  reduce using rule 45 (Stmt)


state 73

   46 Stmt: ForStmt .

    $default  reduce using rule 46 (Stmt)


state 74

   48 Stmt: ReturnStmt .

    $default  reduce using rule 48 (Stmt)


state 75

   47 Stmt: BreakStmt .

    $default  reduce using rule 47 (Stmt)


state 76

   49 Stmt: PrintStmt .

    $default  reduce using rule 49 (Stmt)


state 77

   50 Stmt: SwitchStmt .

    $default  reduce using rule 50 (Stmt)


state 78

   53 PeExpr: Expr .
   76 Expr: Expr . '+' Expr
   77     | Expr . '-' Expr
   78     | Expr . '*' Expr
   79     | Expr . '/' Expr
   80     | Expr . '%' Expr
   82     | Expr . '<' Expr
   83     | Expr . T_LessEqual Expr
   84     | Expr . '>' Expr
   85     | Expr . T_GreaterEqual Expr
   86     | Expr . T_Equal Expr
   87     | Expr . T_NotEqual Expr
   88     | Expr . T_And Expr
   89     | Expr . T_Or Expr
   96 LValue: Expr . '.' T_Identifier
   97       | Expr . '[' Expr ']'
   99 Call: Expr . '.' T_Identifier '(' ExprList ')'

    T_LessEqual     shift, and go to state 112
    T_GreaterEqual  shift, and go to state 113
    T_Equal         shift, and go to state 114
    T_NotEqual      shift, and go to state 115
    T_And           shift, and go to state 116
    T_Or            shift, and go to state 117
    '<'             shift, and go to state 118
    '>'             shift, and go to state 119
    '+'             shift, and go to state 120
    '-'             shift, and go to state 121
    '/'             shift, and go to state 122
    '*'             shift, and go to state 123
    '%'             shift, and go to state 124
    '.'             shift, and go to state 125
    '['             shift, and go to state 126

    $default  reduce using rule 53 (PeExpr)


state 79

   70 Expr: LValue . '=' Expr
   72     | LValue .

    '='  shift, and go to state 127

    $default  reduce using rule 72 (Expr)


state 80

   74 Expr: Call .

    $default  reduce using rule 74 (Expr)


state 81

   71 Expr: Constant .

    $default  reduce using rule 71 (Expr)


state 82

   24 Variable: Type T_Identifier .

    $default  reduce using rule 24 (Variable)


state 83

   33 FnHeader: T_Void T_Identifier '(' Formals ')' .

    $default  reduce using rule 33 (FnHeader)


state 84

   36 FormalList: FormalList ',' . Variable

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    Variable  go to state 128
    Type      go to state 36


state 85

   21 ImplList: T_Implements T_Identifier . ImplList

    T_Implements  shift, and go to state 40
    ','           shift, and go to state 41

    $default  reduce using rule 20 (ImplList)

    ImplList  go to state 129


state 86

   22 ImplList: ',' T_Implements . T_Identifier ImplList

    T_Identifier  shift, and go to state 130


state 87

   13 ClassDecl: T_Class T_Identifier PeExtend ImplList '{' . Fields '}'

    $default  reduce using rule 16 (Fields)

    Fields  go to state 131


state 88

   12 Prototype: T_Void . T_Identifier '(' Formals ')' ';'

    T_Identifier  shift, and go to state 132


state 89

    8 InterfaceDecl: T_Interface T_Identifier '{' ProtoList '}' .

    $default  reduce using rule 8 (InterfaceDecl)


state 90

   10 ProtoList: ProtoList Prototype .

    $default  reduce using rule 10 (ProtoList)


state 91

   11 Prototype: Type . T_Identifier '(' Formals ')' ';'
   30 Type: Type . T_Dims

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 133


state 92

   32 FnHeader: Type T_Identifier '(' Formals ')' .

    $default  reduce using rule 32 (FnHeader)


state 93

   56 WhileStmt: T_While '(' . Expr ')' Stmt

    T_Null            shift, and go to state 45
    T_This            shift, and go to state 46
    T_New             shift, and go to state 52
    T_NewArray        shift, and go to state 53
    T_ReadInteger     shift, and go to state 55
    T_ReadLine        shift, and go to state 56
    T_Identifier      shift, and go to state 96
    T_StringConstant  shift, and go to state 59
    T_IntConstant     shift, and go to state 60
    T_DoubleConstant  shift, and go to state 61
    T_BoolConstant    shift, and go to state 62
    '-'               shift, and go to state 63
    '!'               shift, and go to state 64
    '('               shift, and go to state 65

    Expr      go to state 134
    LValue    go to state 79
    Call      go to state 80
    Constant  go to state 81


state 94

   57 ForStmt: T_For '(' . PeExpr ';' Expr ';' PeExpr ')' Stmt

    T_Null            shift, and go to state 45
    T_This            shift, and go to state 46
    T_New             shift, and go to state 52
    T_NewArray        shift, and go to state 53
    T_ReadInteger     shift, and go to state 55
    T_ReadLine        shift, and go to state 56
    T_Identifier      shift, and go to state 96
    T_StringConstant  shift, and go to state 59
    T_IntConstant     shift, and go to state 60
    T_DoubleConstant  shift, and go to state 61
    T_BoolConstant    shift, and go to state 62
    '-'               shift, and go to state 63
    '!'               shift, and go to state 64
    '('               shift, and go to state 65

    $default  reduce using rule 52 (PeExpr)

    PeExpr    go to state 135
    Expr      go to state 78
    LValue    go to state 79
    Call      go to state 80
    Constant  go to state 81


state 95

   54 IfStmt: T_If '(' . Expr ')' Stmt
   55       | T_If '(' . Expr ')' Stmt T_Else Stmt

    T_Null            shift, and go to state 45
    T_This            shift, and go to state 46
    T_New             shift, and go to state 52
    T_NewArray        shift, and go to state 53
    T_ReadInteger     shift, and go to state 55
    T_ReadLine        shift, and go to state 56
    T_Identifier      shift, and go to state 96
    T_StringConstant  shift, and go to state 59
    T_IntConstant     shift, and go to state 60
    T_DoubleConstant  shift, and go to state 61
    T_BoolConstant    shift, and go to state 62
    '-'               shift, and go to state 63
    '!'               shift, and go to state 64
    '('               shift, and go to state 65

    Expr      go to state 136
    LValue    go to state 79
    Call      go to state 80
    Constant  go to state 81


state 96

   95 LValue: T_Identifier .
   98 Call: T_Identifier . '(' ExprList ')'

    '('  shift, and go to state 105

    $default  reduce using rule 95 (LValue)


state 97

   58 ReturnStmt: T_Return PeExpr . ';'

    ';'  shift, and go to state 137


state 98

   59 BreakStmt: T_Break ';' .

    $default  reduce using rule 59 (BreakStmt)


state 99

   93 Expr: T_New '(' . T_Identifier ')'

    T_Identifier  shift, and go to state 138


state 100

   94 Expr: T_NewArray '(' . Expr ',' Type ')'

    T_Null            shift, and go to state 45
    T_This            shift, and go to state 46
    T_New             shift, and go to state 52
    T_NewArray        shift, and go to state 53
    T_ReadInteger     shift, and go to state 55
    T_ReadLine        shift, and go to state 56
    T_Identifier      shift, and go to state 96
    T_StringConstant  shift, and go to state 59
    T_IntConstant     shift, and go to state 60
    T_DoubleConstant  shift, and go to state 61
    T_BoolConstant    shift, and go to state 62
    '-'               shift, and go to state 63
    '!'               shift, and go to state 64
    '('               shift, and go to state 65

    Expr      go to state 139
    LValue    go to state 79
    Call      go to state 80
    Constant  go to state 81


state 101

   60 PrintStmt: T_Print '(' . NeExprList ')' ';'

    T_Null            shift, and go to state 45
    T_This            shift, and go to state 46
    T_New             shift, and go to state 52
    T_NewArray        shift, and go to state 53
    T_ReadInteger     shift, and go to state 55
    T_ReadLine        shift, and go to state 56
    T_Identifier      shift, and go to state 96
    T_StringConstant  shift, and go to state 59
    T_IntConstant     shift, and go to state 60
    T_DoubleConstant  shift, and go to state 61
    T_BoolConstant    shift, and go to state 62
    '-'               shift, and go to state 63
    '!'               shift, and go to state 64
    '('               shift, and go to state 65

    NeExprList  go to state 140
    Expr        go to state 141
    LValue      go to state 79
    Call        go to state 80
    Constant    go to state 81


state 102

   91 Expr: T_ReadInteger '(' . ')'

    ')'  shift, and go to state 142


state 103

   92 Expr: T_ReadLine '(' . ')'

    ')'  shift, and go to state 143


state 104

   61 SwitchStmt: T_Switch '(' . Expr ')' '{' Cases '}'

    T_Null            shift, and go to state 45
    T_This            shift, and go to state 46
    T_New             shift, and go to state 52
    T_NewArray        shift, and go to state 53
    T_ReadInteger     shift, and go to state 55
    T_ReadLine        shift, and go to state 56
    T_Identifier      shift, and go to state 96
    T_StringConstant  shift, and go to state 59
    T_IntConstant     shift, and go to state 60
    T_DoubleConstant  shift, and go to state 61
    T_BoolConstant    shift, and go to state 62
    '-'               shift, and go to state 63
    '!'               shift, and go to state 64
    '('               shift, and go to state 65

    Expr      go to state 144
    LValue    go to state 79
    Call      go to state 80
    Constant  go to state 81


state 105

   98 Call: T_Identifier '(' . ExprList ')'
